openshift/reference/open-webui/open-webui-service.yaml
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata": {
    "name": "open-webui",
    "namespace": "dda-sso",
    "labels": {
      "app.kubernetes.io/part-of": "dda-sso",
      "app.kubernetes.io/name": "open-webui"
    }
  },
  "spec": {
    "selector": {
      "app": "open-webui"
    },
    "ports": [
      {
        "name": "http",
        "port": 8080,
        "targetPort": 8080
      }
    ]
  }
}
